[package]
name = "udp-server-tunnel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tunnel-public-side"
path = "src/public.rs"

[[bin]]
name = "tunnel-local-side"
path = "src/local.rs"

[dependencies]
tun-tap = "0.1.2"
tokio = { version = "1.17", features = ["full"] }